--- a/.design/events-plugin-code/less/components/bootstrap/table.less
+++ b/.design/events-plugin-code/less/components/bootstrap/table.less
@@ -28,7 +28,7 @@
       }
    }
    &--header {
-      font-size: 0.9em;
+      // font-size: 0.9em;
       font-weight: bold;
    }
    &__date {
@@ -120,7 +120,7 @@
    &--basic &--header {
       background: @table-bg;
       border-bottom: 4px double @table-borders;
-      font-size: 0.9em;
+      // font-size: 0.9em;
    }
 
     // ============================
@@ -140,7 +140,7 @@
 
    }
    &--shadow &--header {
-      font-size: 0.8em;
+      font-size: 0.9em;
       text-transform: uppercase;
       letter-spacing: 1px;
       color: fade(@dark, 60%);
