--- a/.design/events-plugin-code/less/components/standalone/table.less
+++ b/.design/events-plugin-code/less/components/standalone/table.less
@@ -34,7 +34,7 @@
       }
    }
    &--header {
-      font-size: 0.9em;
+      // font-size: 0.9em;
       font-weight: bold;
       padding: .8em 1.2em;
       // height: 40px;
@@ -143,7 +143,7 @@
    &--basic &--header {
       background: @table-bg;
       border-bottom: 4px double @table-borders;
-      font-size: 0.9em;
+      // font-size: 0.9em;
    }
 
    // ============================
@@ -161,7 +161,7 @@
       // border: 0;
    }
    &--shadow &--header {
-      font-size: 0.8em;
+      font-size: 0.9em;
       text-transform: uppercase;
       letter-spacing: 1px;
       // opacity: 0.6;
