--- a/.design/events-plugin-code/less/layout.less
+++ b/.design/events-plugin-code/less/layout.less
@@ -3,6 +3,9 @@
 		margin: 0;
 		clear: none;
 	}
+	& h4&__data-title {
+		margin: 0;
+	}
 }
 
 .aj, .aj * {
